infra_auto_scalling/rds.tf
resource "aws_db_subnet_group" "SG-db" {
  name       = "main"
  subnet_ids = ["${aws_subnet.private_a.id}", "${aws_subnet.private_b.id}"]

  tags = {
    Name = "My DB subnets group"
  }
}

resource "aws_db_instance" "web" {
  allocated_storage         = 10
  storage_type              = "gp2"
  engine                    = "mysql"
  engine_version            = "5.7"
  instance_class            = "db.t2.micro"
  name                      = "mydb"
  username                  = "foo"
  password                  = "foobarbaz"
  parameter_group_name      = "default.mysql5.7"
  availability_zone         = "${var.region}a"
  final_snapshot_identifier = true

  db_subnet_group_name   = "${aws_db_subnet_group.SG-db.id}"
  vpc_security_group_ids = ["${aws_security_group.db.id}"]
}
